# pya2ltools

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_server.py  tests.sh
.github/workflows/: github-actions.yml
pya2ltools/: model.py  pya2l_server.py  pya2ltools.py  update_a2l.py
pya2ltools/a2l/: characteristic_model.py  compu_methods.py  mod_par_model.py  model.py  project_model.py  reader.py  util.py
pya2ltools/a2l/model/: characteristic_model.py  compu_methods.py  mod_par_model.py  model.py  project_model.py
pya2ltools/a2l/reader/: dict_with_index.py  reader.py  token.py  util.py
pya2ltools/a2l/tools/: merge_a2l.py  read_calibration_data.py  update_a2l.py
pya2ltools/a2l/writer/: template.py  writer.py
pya2ltools/dwarf/: model.py  reader.py
test/: test_reader_util.py
test/ECU_Description/: ASAP2_Demo_V171_reduced.a2l  ASAP2_Error.a2l
test/a2l/: test_a2l.py  test_read_calibration_data.py
test/arm_project/: compile.sh  test.a2l  test.ld  test_slave.a2l  test_structs.c  test_structs.hex
test/dwarf/: test_dwarf_reader.py
test/gcc/: test_structs.c
